fixing mobile spacing again

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,6 @@ img {
 }
 #cousins {
 	left: 0px;
-	top: 222px;
 	position: absolute;
 }
 #cousins ul {
